findbugs: efficent number and boolean constructors